# MRPAC

./: .gitignore  README.md  mrpac_dev.yml  pyproject.toml  requirements.txt
docs/source/: conf.py
docs/source/_templates/: custom-module-template.rst
resources/: uid_prefix.txt
src/: Autocontour.py  AutocontourCT.py  AutocontourMR.py  DICOM_Networking.py  MRPAC.py  RTstruct.py  Utils.py  __init__.py  __main__.py  _globals.py  _version.py
src/mrpac/: AutocontourCT.py  AutocontourCT_TS.py  AutocontourMR.py  DICOM_Networking.py  MRPAC.py  RTstruct.py  Utils.py  VNet.py  __init__.py  __main__.py  _globals.py  _version.py  add_window.py  config_window.py  edit_window.py  login.py  setup_window.py  ui_add.py  ui_config.py  ui_edit.py  ui_login.py  ui_setup.py  ui_verify.py  verify_window.py
src/mrpac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ui_files/: Add.ui  Config.ui  Edit.ui  Login.ui  Run.ui  Setup.ui  Users.ui  Verify.ui
