[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mrpac"
authors = [{ name = "Yasin Abdulkadir", email = "YasinAAbdulkadir@gmail.com" }]
description = "A desktop application program for autocontouring DICOM images sent over a DICOM Network."
requires-python = ">=3.9"
license = { text = "LGPL-3.0-only" }


classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "readme", "dependencies"]

[project.scripts]
mrpac = "mrpac.__main__:start"

[tool.setuptools.dynamic]
version = { attr = "mrpac.VERSION" }
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
doc = [
    "sphinx~=7.2.6",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-rtd-theme",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
exclude = ["dist", "docs", "test", "resources", "screencaptures"]
ignore_missing_imports = true

# [[tool.mypy.overrides]]
# modules = ""
# disable_error_code = ["import-untyped"]
# ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ['test', "docs", "dist", "resources", "screencaptures"]
skips = ["B404", "B603"]


